--- a/views/index.jade
+++ b/views/index.jade
@@ -2,4 +2,6 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  h2 Add a github username to the url to see streak content
+  p like 
+    a(href='/jshawl') /jshawl
