--- a/views/index.jade
+++ b/views/index.jade
@@ -2,6 +2,5 @@ extends layout
 
 block content
   h1= title
-  h2 Add a github username to the url to see streak content
-  p like 
-    a(href='/jshawl') /jshawl
+  p login 
+    a(href='/settings') /settings
