--- a/views/index.jade
+++ b/views/index.jade
@@ -5,3 +5,5 @@ block content
   h2 Add a github username to the url to see streak content
   p like 
     a(href='/jshawl') /jshawl
+  p
+    a(href='https://github.com/login/oauth/authorize?scope=user:email&client_id=4537e65f3d162cb4b2c3') Login with Github
