--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,6 @@
 <% if current_user %>
-    Welcome <%= current_user.name %>
+    Welcome <%= current_user.inspect %>
+  <%= link_to "Sign out", "/signout" %>
   <% else %>
   <%= link_to "Sign in with Github", "/auth/github" %>
 <% end %>
