redirect to settings after login

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,12 @@
 </head>
 <body>
 
+  <% if current_user %>
+    <%= link_to "Logout "+ current_user.name, '/signout'  %>
+  <% else %>
+    <%= link_to "Sign in with Github", "/auth/github" %>
+  <% end %>
+
 <%= yield %>
 
 </body>
