fix view issues

--- a/app/views/settings/index.html.erb
+++ b/app/views/settings/index.html.erb
@@ -12,11 +12,9 @@
 
 
   <tbody>
-    <% @settings.each do |setting| %>
       <tr>
-        <td><%= setting.reminders %></td>
+        <td><%= @setting.reminders %></td>
       </tr>
-    <% end %>
   </tbody>
 </table>
 
