the beginning style stuffs

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,8 @@
 </head>
 <body>
 
+  <h1 id="logo">Keep Streaking</h1>
+
   <% if current_user %>
     <%= link_to "Logout "+ current_user.name, '/signout'  %>
   <% else %>
