--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -33,6 +33,8 @@ body {
 }
 
 p {
+  margin: 0 auto;
+  max-width: 40em;
   font-size: 1em;       /* 16 */
   line-height: 1.5em;   /* 24 */
   margin-bottom: 1.5em;
@@ -46,7 +48,7 @@ h1, h2, h3, h4, h5, h6, p {
 
 h1 {
   font-size: 3em;       /* 48 */
-  line-height: 1em;     /* 48 */
+  line-height: 2em;     /* 48 */
   float: left;
   width: 15em;
   margin: 1em auto .5em;
@@ -86,4 +88,35 @@ a {
 
 label {
   font-weight: bold;
+}
+
+img {
+  display: block
+}
+
+.center {
+  margin: 0em auto;
+}
+
+.space-vert {
+  padding: 6em 0em 2em;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.btn {
+  width: 20em;
+  text-align: center;
+  margin: 6em auto;
+  padding: 2em;
+  display: block;
+  border: 1px solid #C0E2C5;
+  color: #6E9173;
+}
+
+.btn:hover {
+  border: 1px solid #8DA590;
+  color: #48694D;
 }
