--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,13 +8,19 @@
 </head>
 <body>
 
-  <h1 id="logo">Keep Streaking</h1>
+  <%= image_tag("logo.png", :alt => "rss feed", :class => "center space-vert") %>
+
+  <p class='center text-center'>Timely email reminders so you never lose your streak on Github!</p>
+
 
   <% if current_user %>
-    <%= link_to "Logout "+ current_user.name, '/signout'  %>
+    <%= link_to "Logout "+ current_user.name, '/signout', :class => 'btn center' %>
   <% else %>
-    <%= link_to "Sign in with Github", "/auth/github" %>
+    <%= link_to "Sign in with Github", "/auth/github", :class => 'btn center' %>
   <% end %>
+
+  <p class='center text-center'>500 streakers strong!</p>
+  <p class='center text-center'>Top Streak: 167 days</p>
 
 <%= yield %>
 
