--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,7 @@
     <%= link_to "Sign in with Github", "/auth/github", :class => 'btn center' %>
   <% end %>
 
+  <p class='center text-center'>500 streakers strong!</p>
   <p class='center text-center'>Top Streak: 167 days</p>
 
 <%= yield %>
