add dynamic stats

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,1 +1,2 @@
 <p class="center text-center"><%= @users %> streakers strong!</p>
+<p class="center text-center"> Top streak: <%= @topstreak %> days!</p>
