--- a/app/views/settings/_form.html.erb
+++ b/app/views/settings/_form.html.erb
@@ -15,6 +15,10 @@
     <%= f.label :reminders %><br>
     <%= f.check_box :reminders %>
   </div>
+  <div class="field">
+    <%= f.label "Feature on leaderboard? "%><br>
+    <%= f.check_box :public %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
