--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,9 @@
   <% end %>
   <nav>
     <ul>
+  <% if current_user %>
       <li><%= link_to 'Settings' ,settings_path %></li>
+    <% end %>
       <li><%= link_to 'Leaderboard', '/leaderboard'  %></li>
     </ul>
   </nav>
