add site verification

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <meta name="google-site-verification" content="Ha9YCEJXIW35cu4FGicNByf9zo5bAihmV5slVUp-_M0" />
 </head>
 <body>
 
