--- a/app/views/user_mailer/send_email.html.erb
+++ b/app/views/user_mailer/send_email.html.erb
@@ -1,1 +1,3 @@
-You gotta commit, bro.
+Make a commit asap! You're about to lose your streak of <%= @days %> days!
+<br><br>
+<%= link_to "Change notification settings", "http://keepstreaking.com"+ settings_path %>
