--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
   <% else %>
     <%= link_to "Sign in with Github", "/auth/github", :class => 'btn center' %>
   <% end %>
-
+<a href="mailto:hello@dvncan.com,jesse@jshawl.com?cc=cash@square.com&amp;subject=%1010.00&amp;body=Keep Streaking is awesome! Go treat yourselves to some drinks!" onclick="window.open('https://mail.google.com/mail/?view=cm&amp;tf=1&amp;to=hello@dvncan.com,jesse@jshawl.com&amp;cc=cash@square.com&amp;bcc=&amp;su=%242.99&amp;body=Keep Streaking is awesome! Go treat yourselves to some drinks!">Buy me a coffee</a>
 <%= yield %>
  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 </body>
