--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -87,6 +87,7 @@ a {
 
 label {
   font-weight: bold;
+  display:inline-block;
 }
 
 img {
@@ -130,3 +131,22 @@ stroke-width:.5;
   margin-top: 3em;
   display: block;
 }
+
+
+body{
+  max-width:40em;
+  margin:0 auto 4em auto;
+}
+
+table{
+  border-collapse:collapse;
+  width:100%;
+}
+
+  th, td{
+    padding: .5em;
+  }
+
+  td:nth-child(2){
+    text-align:right;
+  }
