--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,18 @@
+  <div id='logo'></div>
+
+  <p class='center text-center'>Timely email reminders so you never lose your streak on Github!</p>
+
+
+  <% if current_user %>
+    <%= link_to "Logout "+ current_user.name, '/signout', :class => 'btn center' %>
+  <% else %>
+    <%= link_to "Sign in with Github", "/auth/github", :class => 'btn center' %>
+  <% end %>
+  <nav>
+    <ul>
+      <li><%= link_to 'Leaderboard', '/leaderboard'  %></li>
+    </ul>
+  </nav>
+
 <p class="center text-center"><%= @users %> streakers strong!</p>
 <p class="center text-center"> Top streak: <%= @topstreak %> days!</p>
