fix mail link to prevent error

--- a/app/views/user_mailer/send_email.html.erb
+++ b/app/views/user_mailer/send_email.html.erb
@@ -1,3 +1,3 @@
 Make a commit asap! You're about to lose your streak of <%= @days %> days!
 <br><br>
-<%= link_to "Change notification settings", "http://keepstreaking.com"+ settings_path %>
+<%= link_to "Change notification settings", "http://keepstreaking.com" %>
