--- a/app/views/settings/_form.html.erb
+++ b/app/views/settings/_form.html.erb
@@ -12,11 +12,11 @@
   <% end %>
 
   <div class="field">
-    <%= f.label "Email me when I'm about to lose my streak" %><br>
+    <%= f.label "Email Reminders" %><br>
     <%= f.check_box :reminders %>
   </div>
   <div class="field">
-    <%= f.label "Feature on leaderboard "%><br>
+    <%= f.label "Feature on Leaderboard"%><br>
     <%= f.check_box :public %>
   </div>
   <div class="actions">
