--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,1 @@
-<p class="center text-center"><%= @users %> streakers strong!</p>
-<p class="center text-center"> Top streak: <%= @topstreak %> days!</p>
+<span class="center text-center info"><%= @users %> streakers strong / top streak: <%= @topstreak %> days</span>
