--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -1,20 +1,83 @@
+
+html {
+  font-size: 16px;
+}
+
 body {
+  font-size: 100%;
+  margin: 0;
+  padding: 0;
   background-color: #fff;
-  color: #333;
-  font-family: verdana, arial, helvetica, sans-serif;
-  font-size: 13px;
-  line-height: 18px;
+};
+
+@media all and (max-width: 72em) {
+  body {
+    // font-size: 95%;
+  }
 }
 
-p, ol, ul, td {
-  font-size: 2em;
-  line-height: 2.4em;
+p {
+  margin: 0 auto;
+  max-width: 40em;
+  color: #999;
+  font-family: Georgia, serif;
+  font-size: 1.25em;       /* 16 */
+  line-height: 2.4em;   /* 24 */
+  margin-bottom: 1.5em;
 }
 
-pre {
-  background-color: #eee;
-  padding: 10px;
-  font-size: 11px;
+h1, h2, h3, h4, h5, h6, p {
+  margin-top: 0;
+  margin-left: 0;
+  margin-right: 0;
+}
+
+h1 {
+  font-size: 3em;       /* 48 */
+  line-height: 2em;     /* 48 */
+  float: left;
+  width: 15em;
+  margin: 1em auto .5em;
+}
+
+h2 {
+  font-size: 2.25em;       /* 36 */
+  line-height: 1.3333em;   /* 48 */
+  // margin: .66667em;
+  margin: 1.3333em auto .66667em;
+}
+
+h3 {
+  font-size: 1.5em;     /* 24 */
+  line-height: 1em;     /* 24 */
+  margin-bottom: 1em;
+}
+
+h4, h5, h6 {
+  font-size: 1em;      /* 16 */
+  line-height: 1.5em;  /* 24 */
+  margin-bottom: 1.5em;
+}
+
+ul, ol {
+  font-size: 1em;
+	list-style-type: none;
+  line-height: 1.5em;
+  margin: 0 auto 1.5em;
+  padding-left: 3em;
+}
+
+a {
+  text-decoration: none;
+}
+
+label {
+  font-weight: bold;
+  display:inline-block;
+}
+
+img {
+  display: block
 }
 
 div {
