--- a/app/views/leaderboard/index.html.erb
+++ b/app/views/leaderboard/index.html.erb
@@ -45,4 +45,6 @@
     <td><%= s.streak %> days!</td>
   </tr>
 <% end %>
+
+  <p>Like this? <a href="mailto:hello@dvncan.com,jesse@jshawl.com?cc=cash@square.com&amp;subject=%1010.00&amp;body=Keep Streaking is awesome! Go treat yourselves to some drinks!" onclick="window.open('https://mail.google.com/mail/?view=cm&amp;tf=1&amp;to=hello@dvncan.com,jesse@jshawl.com&amp;cc=cash@square.com&amp;bcc=&amp;su=%242.99&amp;body=Keep Streaking is awesome! Go treat yourselves to some drinks!">Treat us to a round of drinks!</a></p>
 </table>
