Add image to homepage

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,5 @@
+<div class='container'>
+<%= image_tag("logo.png", :alt => "logo", :class => "logo-img" ) %>
   <p class='header'>Timely email reminders so you never lose your streak on Github!</p>
 
 
@@ -9,3 +11,4 @@
 
 <p class="info center text-center"><%= @users %> streakers strong!</p>
 <p class="info center text-center"> Top streak: <%= @topstreak %> days!</p>
+</div>
